config-root/namespaces/jx-production/learnk8s/learnk8s-ingress.yaml
# Source: learnk8s/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: learnk8s
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: learnk8s
              servicePort: 80
      host: learnk8s-jx-production.104.154.179.98.nip.io
